# Weather-Data-Analysis

./: .gitignore  CMakeLists.txt  Define.h.in  ProjectPath.h.in
idc/: CMakeLists.txt
idc/c/: CMakeLists.txt  crtsurfdata.cpp  killall.cpp  start.cpp
public/: CMakeLists.txt  PActice.cpp  PActice.h  _cmpublic.h  _ftp.cpp  _ftp.h  _public.cpp  _public.h
tools/: CMakeLists.txt
tools/c/: CMakeLists.txt  checkproc.cpp  deletefiles.cpp  ftpgetfiles.cpp  gzipfiles.cpp  procctl.cpp
